--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "test": "mocha"
-  }}
-//   "author": "",
-//   "license": "ISC",
-//   "devDependencies": {
-//     "chai": "^4.3.4",
-//     "mocha": "^10.6.0"
-//   }
-// }
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^10.6.0"
+  }
+}
