--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha"
+    "test": "mocha --exit --recursive",
+   "test:failures": "mocha --exit --recursive --grep 'failure'"
   },
   "author": "",
   "license": "ISC",
