--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,13 +40,12 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t hani9/pipelinefinal:latest .
+          docker build -t hani9/piplinehani:latest .
           docker images  # Optional: display Docker images for verification
+
+      - name: Log in to Docker Hub
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Push Docker image to Docker Hub
         run: |
-          echo ${{ secrets.DOCKER_HUB_TOKEN }} | docker login -u hani9 --password-stdin
-          docker push hani9/pipelinefinal:latest
-
-      # Optional: Add deployment steps here (e.g., deploy to a server/platform)
-
+          docker push hani9/piplinehani:latest
