--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "start": "node index.js",
     "test": "mocha --exit --recursive",
     "test:failures": "mocha --exit --recursive --grep 'failure'"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^10.6.0"
   }
 }
