--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,10 @@ jobs:
         run: chmod +x ./node_modules/.bin/mocha
 
       - name: Install dependencies
-        run: npm install
+        run: npm install 
+
+      - name: Install express
+        run: npm install express
 
       - name: Run all tests
         run: npm test
