last rou1 commit

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Install express
         run: npm install express
 
+      - name: start the server
+        run: node server.js
+
       - name: Run all tests
         run: npm test
 
