last and final commit

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         run: npm test
 
       - name: Run failure tests
-        run: npm run test:failures || exit 1  # Exit with code 1 if failure tests fail
+        run: npm run test:failures || exit 1  
 
       - name: Build Docker image
         run: |
