--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,4 +61,4 @@ jobs:
 
       - name: Push Docker image to Docker Hub
         run: |
-          docker push hani9/piplinehani:latest
+          docker push hani9/pipeline:latest
